# jupyter_config

./: README.md  Untitled.ipynb  flit.ini  jupyter_conf_search.py  pyproject.toml  setup.py
jupyter_conf_search/: __init__.py
jupyter_config/: __init__.py  _version.py  configapp.py  path_utils.py
