[build-system]
requires = ["flit", "setuptools", "wheel"]
# build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "jupyter_config"
author = "mpacer"
author-email = "mpacer@berkeley.edu"
home-page = "https://github.com/mpacer/jupyter_config"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">3"
description-file = "README.md"


[tool.flit.scripts]
jupyter-config = "jupyter_config.configapp:main"
